# SPDB

./: .gitignore  LICENSE  README.md  notatki_spdb_dok_wstępna.txt  test.py
backend/: .env  pyproject.toml
backend/app/: api.py  config.py  exceptions.py  logger.py  main.py
backend/app/path/: a_star.py  endpoints.py  intersection.py  schema.py  service.py  worker_module.py
backend/app/test/: test_intersection.py  test_service.py
backend/app/test/performance/: landmarks.json  number_of_districts.py  number_of_nodes.py  number_of_processes.py  run_all.py  utils.py
backend/results/: number_of_districts.json  number_of_nodes.json  number_of_processes.json
backend/visualisation/: number_of_districts.ipynb  number_of_nodes.ipynb  number_of_processes.ipynb
frontend/: index.html  script.js  styles.css
