[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-camelcase>=2.0.0",
    "geopy>=2.4.1",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "osmnx>=2.0.2",
    "overpy>=0.7",
    "pip>=25.1.1",
    "pydantic-settings>=2.0.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.2",
]
